components/manifests/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backend-route
  labels:
    app: backend-api
spec:
  to:
    kind: Service
    name: backend-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
